Momentum animator: Short scrolls are too far, medium scrolls aren't far enough https://bugs.webkit.org/show_bug.cgi?id=233272 <rdar://problem/85472653>

Reviewed by Simon Fraser.

* platform/mac/ScrollingEffectsController.mm:
(WebCore::adjustedVelocity):
(WebCore::ScrollingEffectsController::handleWheelEvent):
Attempt to apply a empirically-derived curve to the initial velocity
to fit the distance of a normal momentum scroll.



Canonical link: https://commits.webkit.org/244364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285964 268f45cc-cd09-0410-ab3c-d52691b4dbfc